lesson2/styles/large.css
@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;700;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

body{
    font-size: 16px;
}

main{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 20px;
}

header{
    text-align: center;
    background-color: #213547;
    color: white;
    font-family: 'Assistant', sans-serif;
    font-size: 1.5em;
}

header h1, h2{
    margin: 0;
    
}

header h1{
    padding-top: 0.2em;
}

header h2{
    line-height: 2em;
}

.card1, .card2, .card3{
    background-color: #FDFCE5;
    border: 5px solid #213547;
    border-radius: 15px;
    font-family: 'Montserrat', sans-serif;
    margin-top: 70px;
    text-align: center;
    max-width: 450px;
    justify-self: center;
}

.content{
    max-width: 440px;
    padding: 5px;
}

.content img{
    display: block;
    margin: 0 auto;
    max-width: 100%;
    border: 1px solid #213547;
}

main a{
    display: block;
    margin-bottom: 1em;
    color: white;
}

.sectionheader{
    padding: 0.2em;
    background-color: #213547;
    color: white;
}

.firstcolor{
    color: #767676;
}

.secondcolor{
    color: #213547;
}

.thirdcolor{
    color: #42b883;
}

footer{
    font-family: 'Assistant', sans-serif;
    font-weight: 400;
    font-size: 1.2em;
    margin-top: 70px;
    color: white;
    background-color: #213547;
    padding: 15px;
    text-align: center;
}

